fix more home page spacing

--- a/wp-content/themes/cmp/assets/styles/pages/_featured-exhibits.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_featured-exhibits.scss
@@ -18,12 +18,16 @@
   width:48%;
   margin-bottom: $base-spacing;
 
-  &:last-child {
+  &:last-child,
+  &:nth-last-child(2) {
     margin-bottom: 0;
   }
 
   @include grid-media($medium) {
     width: 100%;
+    &:nth-last-child(2) {
+      margin-bottom: $base-spacing;
+    }
   }
 }
 
